--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Personnalise
+*.sln
+*.exe
+*.ipch
+*.vcxproj
+*.vcxproj.*
+*.db*
+*.opendb
+*.vsidx
+*Debug/
+*x64/
+*.vs/
+
 # Prerequisites
 *.d
 
